--- a/uart/uart.qsf
+++ b/uart/uart.qsf
@@ -67,4 +67,11 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE uart.vwf
 set_location_assignment PIN_E16 -to RESet
 set_location_assignment PIN_N1 -to TX
 set_location_assignment PIN_E1 -to CLOckIn
+set_global_assignment -name VHDL_FILE uart_tx.vhd
+set_location_assignment PIN_M2 -to RX
+set_location_assignment PIN_E10 -to text1[0]
+set_location_assignment PIN_F9 -to text1[1]
+set_location_assignment PIN_C9 -to text1[2]
+set_location_assignment PIN_D9 -to text1[3]
+set_global_assignment -name VHDL_FILE uart_rx.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
